# fullstack-vue-fastapi-template

./: CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  vercel.json
.github/: FUNDING.yml
api/: .env-sample  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/src/: config.py  main.py
api/src/schemas/: random_response.py  root_response.py
assets/: AppBar-7YlQGKoj.js  AppBar-bhaeom5B.js  AppBar-fYTRO7mP.css  AppBar-k7GwOZAH.js  AppBar-zEIccdZ7.js  AppBar.vue_vue_type_script_setup_true_lang-L7DxUjkv.js  AppBar.vue_vue_type_script_setup_true_lang-LZXYvWwR.js  AppBar.vue_vue_type_script_setup_true_lang-mpToIJfJ.js  AppBar.vue_vue_type_script_setup_true_lang-xJLy3A72.js  HelloWorld-2BBIJS-N.css  HelloWorld-3HGKtNhB.js  HelloWorld-Cmrar4yK.css  HelloWorld-PtQgMW_o.css  HelloWorld-Ui37m6sk.js  HelloWorld-k5YvgXrF.js  HelloWorld-yLwTnsRO.js  View-DJCLfGYk.js  View-Ip_dtkqZ.js  View-YXkp3evy.js  View-c4ci0lNq.js  View.vue_vue_type_script_setup_true_lang-NMu5dVKf.js  View.vue_vue_type_script_setup_true_lang-YWsCiCFi.js  default-Qo_fGDc3.js  default-r5jNAWwZ.js  (+17 more)
backend/: .pre-commit-config.yaml  Makefile  pyproject.toml  requirements.txt  vercel.json
backend/api/: __main__.py  app.py  config.py  vercel.py
backend/api/entrypoints/: router.py
backend/api/entrypoints/monitoring/: __init__.py  views.py
backend/api/entrypoints/v1/: __init__.py  router.py
backend/api/entrypoints/v1/random_number/: __init__.py  schema.py  views.py
backend/api/entrypoints/v1/root_response/: __init__.py  views.py
backend/api/services/: random_number_service.py  root_response_service.py
backend/api/utils/: custom_decorators.py
backend/tests/: conftest.py
backend/tests/e2e/: test_health.py
backend/tests/e2e/entrypoints/monitoring/: test_health.py
backend/tests/e2e/entrypoints/v1/random_number/: test_random_number_GET.py
backend/tests/e2e/entrypoints/v1/root_response/: test_root_response_GET.py
backend/tests/e2e/v1/random_number/: test_random_number_GET.py
backend/tests/e2e/v1/root_response/: test_root_response_GET.py
backend/tests/unit/: test_vercel.py
backend/tests/unit/services/: test_random_number_service.py  test_root_response_service.py
backend/tests/unit/utils/: test_custom_decorators.py
(+45 files in other folders)
