[tool.poetry]
name = "api"
version = "0.1.3"
description = ""
authors = ["ArielMAJ <ariel.maj@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"


[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
