[tool.poetry]
name = "fastapi-backend-template"
version = "0.2.1"
description = "A FastAPI backend template."
authors = ["ArielMAJ <ariel.maj@hotmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.6.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
